@@ -7,7 +7,6 @@ import net.invictusslayer.slayersbeasts.datagen.loot.SBEntityLoot;
 import net.invictusslayer.slayersbeasts.datagen.loot.SBLootTables;
 import net.invictusslayer.slayersbeasts.datagen.tags.*;
 import net.invictusslayer.slayersbeasts.world.SBNoises;
-import net.invictusslayer.slayersbeasts.world.biome.SBBiomeModifiers;
 import net.invictusslayer.slayersbeasts.world.biome.SBBiomes;
 import net.invictusslayer.slayersbeasts.world.dimension.SBDimensions;
 import net.invictusslayer.slayersbeasts.world.feature.SBConfiguredFeatures;
@@ -16,6 +15,7 @@ import net.invictusslayer.slayersbeasts.world.structure.SBProcessorLists;
 import net.invictusslayer.slayersbeasts.world.structure.SBStructureSets;
 import net.invictusslayer.slayersbeasts.world.structure.SBStructures;
 import net.invictusslayer.slayersbeasts.world.structure.pools.SBPools;
+import net.minecraft.core.Cloner;
 import net.minecraft.core.HolderLookup;
 import net.minecraft.core.RegistryAccess;
 import net.minecraft.core.RegistrySetBuilder;
@@ -24,61 +24,61 @@ import net.minecraft.core.registries.Registries;
 import net.minecraft.data.DataGenerator;
 import net.minecraft.data.PackOutput;
 import net.minecraft.data.loot.LootTableProvider;
+import net.minecraft.resources.RegistryDataLoader;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
-import net.minecraftforge.common.data.DatapackBuiltinEntriesProvider;
 import net.minecraftforge.common.data.ExistingFileHelper;
 import net.minecraftforge.data.event.GatherDataEvent;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
 import net.minecraftforge.fml.common.Mod;
-import net.minecraftforge.registries.ForgeRegistries;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
 @Mod.EventBusSubscriber(modid = SlayersBeasts.MOD_ID, bus = Mod.EventBusSubscriber.Bus.MOD)
 public class SBDataGenerator {
-    private static final RegistrySetBuilder BUILDER = new RegistrySetBuilder()
-            .add(Registries.CONFIGURED_FEATURE, SBConfiguredFeatures::bootstrap)
-            .add(Registries.PLACED_FEATURE, SBPlacedFeatures::bootstrap)
-            .add(Registries.BIOME, SBBiomes::bootstrap)
-            .add(Registries.DIMENSION_TYPE, SBDimensions::bootstrap)
-            .add(Registries.STRUCTURE, SBStructures::bootstrap)
-            .add(Registries.STRUCTURE_SET, SBStructureSets::bootstrap)
-            .add(Registries.TEMPLATE_POOL, SBPools::bootstrap)
-            .add(Registries.PROCESSOR_LIST, SBProcessorLists::bootstrap)
-            .add(Registries.NOISE, SBNoises::bootstrap)
-            .add(ForgeRegistries.Keys.BIOME_MODIFIERS, SBBiomeModifiers::bootstrap);
+	private static final RegistrySetBuilder BUILDER = new RegistrySetBuilder()
+			.add(Registries.CONFIGURED_FEATURE, SBConfiguredFeatures::bootstrap)
+			.add(Registries.PLACED_FEATURE, SBPlacedFeatures::bootstrap)
+			.add(Registries.BIOME, SBBiomes::bootstrap)
+			.add(Registries.DIMENSION_TYPE, SBDimensions::bootstrap)
+			.add(Registries.STRUCTURE, SBStructures::bootstrap)
+			.add(Registries.STRUCTURE_SET, SBStructureSets::bootstrap)
+			.add(Registries.TEMPLATE_POOL, SBPools::bootstrap)
+			.add(Registries.PROCESSOR_LIST, SBProcessorLists::bootstrap)
+			.add(Registries.NOISE, SBNoises::bootstrap);
+//			.add(ForgeRegistries.Keys.BIOME_MODIFIERS, SBBiomeModifiers::bootstrap);
 
-    @SubscribeEvent
-    public static void gatherData(GatherDataEvent event) {
-        DataGenerator generator = event.getGenerator();
-        PackOutput output = generator.getPackOutput();
-        CompletableFuture<HolderLookup.Provider> provider = event.getLookupProvider();
-        ExistingFileHelper existingFileHelper = event.getExistingFileHelper();
-        boolean hasServer = event.includeServer();
+	@SubscribeEvent
+	public static void gatherData(GatherDataEvent event) {
+		DataGenerator gen = event.getGenerator();
+		PackOutput output = gen.getPackOutput();
+		CompletableFuture<HolderLookup.Provider> provider = event.getLookupProvider();
+		ExistingFileHelper helper = event.getExistingFileHelper();
+		boolean hasServer = event.includeServer();
 
-        generator.addProvider(hasServer, new DatapackBuiltinEntriesProvider(output, provider, BUILDER, Collections.singleton(SlayersBeasts.MOD_ID)));
+//		gen.addProvider(hasServer, new DatapackBuiltinEntriesProvider(output, provider, BUILDER, Set.of(SlayersBeasts.MOD_ID))); TODO: Add Datapack Provider
 
-        SBBlockTagsProvider blockTags = generator.addProvider(hasServer, new SBBlockTagsProvider(output, provider, existingFileHelper));
-        generator.addProvider(hasServer, new SBItemTagsProvider(output, provider, blockTags, existingFileHelper));
-        generator.addProvider(hasServer, new SBBiomeTagsProvider(output, provider.thenApply(SBDataGenerator::patchRegistry), existingFileHelper));
-        generator.addProvider(hasServer, new SBEntityTagsProvider(output, provider, existingFileHelper));
-        generator.addProvider(hasServer, new SBPoiTagsProvider(output, provider, existingFileHelper));
+		SBBlockTagsProvider blockTags = gen.addProvider(hasServer, new SBBlockTagsProvider(output, provider, helper));
+		gen.addProvider(hasServer, new SBItemTagsProvider(output, provider, blockTags, helper));
+		gen.addProvider(hasServer, new SBBiomeTagsProvider(output, provider.thenApply(SBDataGenerator::patchRegistry), helper));
+		gen.addProvider(hasServer, new SBEntityTagsProvider(output, provider, helper));
+		gen.addProvider(hasServer, new SBPoiTagsProvider(output, provider, helper));
 
-        generator.addProvider(hasServer, new SBLanguageProvider(output));
-        generator.addProvider(hasServer, new SBRecipeProvider(output));
-        generator.addProvider(hasServer, new SBBlockStateProvider(output, existingFileHelper));
-        generator.addProvider(hasServer, new SBItemModelProvider(output, existingFileHelper));
+		gen.addProvider(hasServer, new SBLanguageProvider(output));
+		gen.addProvider(hasServer, new SBRecipeProvider(output));
+		gen.addProvider(hasServer, new SBBlockStateProvider(output, helper));
+		gen.addProvider(hasServer, new SBItemModelProvider(output, helper));
 
-        generator.addProvider(hasServer, new LootTableProvider(output, SBLootTables.all(), List.of(
-                new LootTableProvider.SubProviderEntry(SBBlockLoot::new, LootContextParamSets.BLOCK),
-                new LootTableProvider.SubProviderEntry(SBEntityLoot::new, LootContextParamSets.ENTITY),
-                new LootTableProvider.SubProviderEntry(SBChestLoot::new, LootContextParamSets.CHEST)
-        )));
-    }
+		gen.addProvider(hasServer, new LootTableProvider(output, SBLootTables.all(), List.of(
+				new LootTableProvider.SubProviderEntry(SBBlockLoot::new, LootContextParamSets.BLOCK),
+				new LootTableProvider.SubProviderEntry(SBEntityLoot::new, LootContextParamSets.ENTITY),
+				new LootTableProvider.SubProviderEntry(SBChestLoot::new, LootContextParamSets.CHEST)
+		)));
+	}
 
-    private static HolderLookup.Provider patchRegistry(HolderLookup.Provider provider) {
-        return BUILDER.buildPatch(RegistryAccess.fromRegistryOfRegistries(BuiltInRegistries.REGISTRY), provider);
-    }
+	private static HolderLookup.Provider patchRegistry(HolderLookup.Provider provider) {
+		Cloner.Factory factory = new Cloner.Factory();
+		RegistryDataLoader.WORLDGEN_REGISTRIES.forEach(data -> data.runWithArguments(factory::addCodec));
+		return BUILDER.buildPatch(RegistryAccess.fromRegistryOfRegistries(BuiltInRegistries.REGISTRY), provider, factory).full();
+	}
 }
